Chapter 11: Compiler completedgit status

--- a/projects/11/Square/Square.vm
+++ b/projects/11/Square/Square.vm
@@ -72,9 +72,9 @@ add
 push constant 510
 lt
 and
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE17
+goto IF_FALSE17
+label IF_TRUE17
 push pointer 0
 call Square.erase 1
 pop temp 0
@@ -85,7 +85,9 @@ pop this 2
 push pointer 0
 call Square.draw 1
 pop temp 0
-label IF_FALSE0
+goto IF_END17
+label IF_FALSE17
+label IF_END17
 push constant 0
 return
 function Square.decSize 0
@@ -94,9 +96,9 @@ pop pointer 0
 push this 2
 push constant 2
 gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE18
+goto IF_FALSE18
+label IF_TRUE18
 push pointer 0
 call Square.erase 1
 pop temp 0
@@ -107,7 +109,9 @@ pop this 2
 push pointer 0
 call Square.draw 1
 pop temp 0
-label IF_FALSE0
+goto IF_END18
+label IF_FALSE18
+label IF_END18
 push constant 0
 return
 function Square.moveUp 0
@@ -116,9 +120,9 @@ pop pointer 0
 push this 1
 push constant 1
 gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE19
+goto IF_FALSE19
+label IF_TRUE19
 push constant 0
 call Screen.setColor 1
 pop temp 0
@@ -154,7 +158,9 @@ push constant 1
 add
 call Screen.drawRectangle 4
 pop temp 0
-label IF_FALSE0
+goto IF_END19
+label IF_FALSE19
+label IF_END19
 push constant 0
 return
 function Square.moveDown 0
@@ -165,9 +171,9 @@ push this 2
 add
 push constant 254
 lt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE20
+goto IF_FALSE20
+label IF_TRUE20
 push constant 0
 call Screen.setColor 1
 pop temp 0
@@ -203,7 +209,9 @@ push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-label IF_FALSE0
+goto IF_END20
+label IF_FALSE20
+label IF_END20
 push constant 0
 return
 function Square.moveLeft 0
@@ -212,9 +220,9 @@ pop pointer 0
 push this 0
 push constant 1
 gt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE21
+goto IF_FALSE21
+label IF_TRUE21
 push constant 0
 call Screen.setColor 1
 pop temp 0
@@ -250,7 +258,9 @@ push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-label IF_FALSE0
+goto IF_END21
+label IF_FALSE21
+label IF_END21
 push constant 0
 return
 function Square.moveRight 0
@@ -261,9 +271,9 @@ push this 2
 add
 push constant 510
 lt
-if-goto IF_TRUE0
-goto IF_FALSE0
-label IF_TRUE0
+if-goto IF_TRUE22
+goto IF_FALSE22
+label IF_TRUE22
 push constant 0
 call Screen.setColor 1
 pop temp 0
@@ -299,6 +309,8 @@ push this 2
 add
 call Screen.drawRectangle 4
 pop temp 0
-label IF_FALSE0
+goto IF_END22
+label IF_FALSE22
+label IF_END22
 push constant 0
 return
